--- a/yepBBS/style.css
+++ b/yepBBS/style.css
@@ -1,11 +1,11 @@
 .display-width{
-	width:850px;
+	width:750px;
 }
 
 body{
 	margin-right: auto;
 	margin-left: auto;
-	width:450px;
+	width:650px;
 }
 
 h1{
@@ -26,12 +26,44 @@ h1{
 .time{
 	float:right;
 	display:inline-block;
-	padding:25px;
+	padding:25px 100px 25px 0;
 
 }
 
 .main-contents{
 	text-align:center;
+}
+
+/* formエリアのデザイン  */
+form{
+	margin : 0 auto;
+	width : 600;
+}
+
+label{
+	display: inline-block;
+	width: 150px;
+	text-align: left;
+	float:left;
+}
+
+ul li{
+	list-style:none;
+	float:left;
+	padding:10px 0px;
+}
+
+/*input, textarea{
+	font: 1em sans-serif;
+	width: 300px;
+	box-sizing: border-box;
+
+}*/
+
+
+textarea{
+	vertical-align: top;
+	height: 4em;
 }
 
 .contents-table{
@@ -47,21 +79,6 @@ h1{
 .contents-table tr:nth-child(even) td{
 	background-color:#EFEFEF;
 }
-
-/*board.php の css----------------*/
-.main{
-	text-align:center;
-}
-
-.thread{
-	padding-right:40%;
-	float:right;
-}
-
-.room-comment{
-	float:left;
-}
-/*---------------------------------*/
 
 .footer{
 	text-align:center;
@@ -103,9 +120,56 @@ h1{
 
 .btn{
 	background-color:#87cefa;
+	display:inline-block;
 	margin-left:30px;
+	float:left;
 }
 
 .error_msg{
 	color:red;
 }
+
+/*board.php の css----------------*/
+.main{
+/*	display:inline-block; */
+/*	text-align:left; */
+/*	display:block; */
+}
+.text_number,text_name,text_content{
+	float:left;
+	vertical-align:middle;
+}
+
+
+.text_date{
+	border-bottom:4px solid #3366CC;
+}
+
+.res_date{
+	border-bottom:1px solid #3366CC;
+}
+
+.thread{
+	text-align:right;
+	display:block;
+/*	padding-right:40%;
+	float:right; */
+}
+
+.room-comment{
+	float:left;
+}
+/* formタグ内の調整 */
+.res{
+	float:left;
+}
+
+.text{
+
+}
+.list_title{
+/*	text-align:center; */
+}
+/*---------------------------------*/
+
+
