--- a/yepBBS/style.css
+++ b/yepBBS/style.css
@@ -10,6 +10,12 @@ h1{
 	padding-left: 130px;
 }
 
+
+.max_comments{
+	color:red;
+	margin-left:110px;
+}
+
 .header{
 	display:inline-block;
 }
@@ -51,6 +57,10 @@ textarea{
 	vertical-align: top;
 	height: 4em;
 	width:240px;
+}
+
+.main-contents{
+	margin-top:80px;
 }
 
 .contents-table{
@@ -119,9 +129,7 @@ textarea{
 	margin-left: 110px;
 }
 
-.link_detail{
-	
-}
+
 .rooms_name{
 	margin-left: 132px;
 	width:200px;
@@ -138,7 +146,9 @@ textarea{
 	color:red;
 }
 
-
+.comments_error_msg{
+	color:red;
+}
 
 
 .title_register{
@@ -216,7 +226,7 @@ textarea{
 }
 /* formタグ内の調整 */
 .res{
-	margin-left:150px;
+	margin-left:158px;
 	width: 70px;
 }
 
@@ -231,6 +241,10 @@ textarea{
 
 .comments_footer{
 	margin-top: 100px;
+}
+
+.comments_error{
+	margin:0px 0px 0px 190px;
 }
 /*---------------------------------*/
 
